# HW2

./: .env  .gitignore  README.md  pyproject.toml  sample_env
blog/: forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: base.html  blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: add_Product.py  create_moderator_group.py
catalog/migrations/: 0001_initial.py  0002_alter_product_description_alter_product_image.py  0002_product_is_published.py  0003_alter_product_options.py  0004_alter_product_options.py  0005_alter_product_options.py  0006_product_owner.py  0007_alter_product_owner.py
catalog/templates/: base.html  product_detail.html  products_list.html
catalog/templates/catalog/: base.html  contacts.html  home.html  product_by_category.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
catalog/templates/catalog/include/: inc_menu.html
catalog/templates/include/: inc_menu.html
config/: settings.py  urls.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
users/templates/users/: login.html  register.html
