[tool.poetry]
name = "hw2"
version = "1"
description = ""
authors = ["Azat Yalmaev <azatyalmaev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.2"
python-dotenv = "^1.1.0"
psycopg2-binary = "^2.9.10"
ipython = "^9.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
